--- a/Untitled3-2.ipynb
+++ b/Untitled3-2.ipynb
@@ -68,7 +68,7 @@
         "import os\n",
         "\n",
         "os.environ['HF_HUB_ENABLE_HF_TRANSFER'] = '1'\n",
-        "os.environ['HF_TOKEN'] = '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'"
+        "os.environ['HF_TOKEN'] = '//'"
       ]
     },
     {
